# valdicc

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO.md  out.txt  test.cpp  test.java
headers/: AST.h  core.h  environment.h  lexer.h  parser.h  preprocessor.h  running_opts.h  symbol.h  symbol_table.h  token.h  usefultools.h
src/: AST.cpp  core.cpp  core.h  environment.cpp  lexer.cpp  lexer.h  main.cpp  parser.cpp  preprocessor.cpp  preprocessor.h  running_opts.h  symbol_table.cpp  token.h  usefultools.cpp  usefultools.h
tests/: Program0.ling  Program1.ling  Program2.ling  Program3.ling  Program4.ling  Program5.ling
